--- a/index.html
+++ b/index.html
@@ -5,37 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script>
-        function girarRuleta(){
-            // mover una imagen hacia la derecha
-            document.getElementsByClassName("imagenes").style.transform = "rotate(360deg)";
-        }
-    </script>
-    <style>
-        #ruleta{
-            width: 100%;
-            height: 200px;
-            border: 1px solid red;
-            transition: 2s;
-        }
-        .imagenes{
-            width: 100px;
-            height: 100px;
-            margin: 6%;
-        }
-    </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div>
-        <h1>La ruleta de comidas chetadas</h1>
-        <div id="ruleta">
-            <div id="imagenesDiv">
-                <img src="./img/patatas.jpeg" alt="patatas" class="imagenes">
-            </div>
-        </div>
-        <button onclick="girarRuleta()">Girar</button>
+    <div id="header" class="container-fluid text-bg-color text-center">
+        <h1>Comidas Chetadas Aleatorias</h1>
     </div>
-
-
+    <div id="ruletaDiv" class="border text-center">
+        <div id="ruletaImg">
+            <img src="./img/ruleta.png" alt="ruleta">
+        </div>
+        <button>Chetarte??</button>
+    </div>
+    <div id="resultado" class="border text-center">
+        <img src="./img/resultado.png" alt="resultado">
+    </div>
 </body>
 </html>
